<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <include
        layout="@layout/action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="54dp"
        android:layout_weight="70"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/image_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/actionbar_grid_item"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="225dp"
        android:text="@string/menuname"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/image_desyes"
        android:layout_width="373dp"
        android:layout_height="52dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="140dp"
        android:text="@string/menudes"
        android:textSize="16dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="77dp"
        android:layout_marginBottom="123dp"
        android:text="@string/menuprice"
        android:textSize="14dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView_rname"
        android:layout_width="64dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="82dp"
        android:text="@string/menurname"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView_tprice"
        android:layout_width="64dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="116dp"
        android:text="@string/price"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView_rn"
        android:layout_width="201dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="77dp"
        android:text="@string/menuruname"
        android:textSize="16dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView_location"
        android:layout_width="64dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="49dp"
        android:text="@string/menurl"
        android:textColor="@android:color/black"
        android:textSize="16dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView_rl"
        android:layout_width="197dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="78dp"
        android:layout_marginBottom="48dp"
        android:text="@string/menurlo"
        android:textSize="16dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView_rate"
        android:layout_width="64dp"
        android:layout_height="28dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="17dp"
        android:text="@string/menurate"
        android:textColor="@android:color/black"
        android:textSize="14dp"
        android:textStyle="normal" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="79dp"
        android:layout_marginBottom="27dp"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="0.5"
        android:theme="@style/ratingbar" />

    <RatingBar
        android:id="@+id/ratingBarrev"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="200dp"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="3"
        android:stepSize="0.5"
        android:theme="@style/ratingbar" />

    <TextView
        android:id="@+id/textrev"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="198dp"
        android:text="@string/rate" />


</RelativeLayout>

